# ember_engine

./: .gitignore  CMakeLists.txt  NAMING.md  Node_organisation_problem.md  README.md  app.c  bhandler.h  build.md  input.c  main.c  scene.h
model/: camera.h  model.h  node.h
shaders/: fragment.glsl  vertex.glsl
src/: app.c  bhandler.h  input.c  shader_reader.h  vertex.h
utils/: gltypes.h  sccfg.h  shader_reader.h  stringmap.h  vector.h
